@@ -75,12 +75,13 @@ skill_out_range_consume: no
 
 // Does the distance between caster and target define if the skill is a ranged skill? (Note 4)
 // If set, when the distance between caster and target is greater than 3 the skill is considered long-range, otherwise it's a melee range.
-// If not set, then the range is determined by the skill (eg: Double Strafe is always long-ranged). 
+// If not set, then the range is determined by the skill's range (if it is above 5, the skill is ranged).
 // Default 14 (mobs + pets + homun)
 skillrange_by_distance: 14
 
 // Should the equipped weapon's range override the skill's range defined in the skill_db for most weapon-based skills? (Note 4)
-// NOTE: Skills affected by this option are those whose range in the skill_db are negative.
+// NOTE: Skills affected by this option are those whose range in the skill_db are negative. Note that unless monster_ai&0x400 is
+// set, the range of all skills is 9 for monsters.
 skillrange_from_weapon: 14
 
 // Should a check on the caster's status be performed in all skill attacks?
